--- a/application.properties
+++ b/application.properties
@@ -10,6 +10,6 @@ spring.datasource.password =pass@123
 
 #hibernate configuartion
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 
