--- a/application.properties
+++ b/application.properties
@@ -1,6 +1,6 @@
 #db connection configuration
 spring.datasource.driverClassName = com.mysql.cj.jdbc.Driver
-spring.datasource.url = jdbc:mysql://localhost:3306/bankingapp?autoreconnect = true
+spring.datasource.url = jdbc:mysql://localhost:3306/bankingappdb?autoreconnect = true
 spring.datasource.username =root
 spring.datasource.password =pass@123
 
